packages/dart_monty_ffi/lib/src/generated/dart_monty_bindings.dart


  late final _monty_pending_fn_kwargs_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<MontyHandle>)>>('monty_pending_fn_kwargs_json');
  late final _monty_pending_fn_kwargs_json = _monty_pending_fn_kwargs_jsonPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>();

  /// Get the pending call ID (monotonically increasing per execution).
  /// Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
  ///
  /// @return  Call ID, or UINT32_MAX if not in Paused state.
  int monty_pending_call_id(
    ffi.Pointer<MontyHandle> handle,
  ) {
    return _monty_pending_call_id(
      handle,
    );
  }

  late final _monty_pending_call_idPtr = _lookup<
          ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<MontyHandle>)>>(
      'monty_pending_call_id');
  late final _monty_pending_call_id = _monty_pending_call_idPtr
      .asFunction<int Function(ffi.Pointer<MontyHandle>)>();

  /// Whether the pending call is a method call (obj.method() vs func()).
  /// Only valid after monty_start/monty_resume returned MONTY_PROGRESS_PENDING.
  ///
  /// @return  1 for method call, 0 for function call, -1 if not in Paused state.
  int monty_pending_method_call(
    ffi.Pointer<MontyHandle> handle,
  ) {
    return _monty_pending_method_call(
      handle,
    );
  }

  late final _monty_pending_method_callPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<MontyHandle>)>>(
          'monty_pending_method_call');
  late final _monty_pending_method_call = _monty_pending_method_callPtr
      .asFunction<int Function(ffi.Pointer<MontyHandle>)>();

  /// Get the completed result as a JSON string.
  /// Only valid after execution reached COMPLETE state.
  ///
  /// @return  Heap-allocated JSON string, or NULL. Caller frees with monty_string_free().
  ffi.Pointer<ffi.Char> monty_complete_result_json(
    ffi.Pointer<MontyHandle> handle,
  ) {
    return _monty_complete_result_json(
      handle,
    );
  }

  late final _monty_complete_result_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<MontyHandle>)>>('monty_complete_result_json');
  late final _monty_complete_result_json = _monty_complete_result_jsonPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyHandle>)>();

  /// Check whether the completed result is an error.
  ///
  /// @return  1 = error, 0 = success, -1 = not in Complete state.
  int monty_complete_is_error(
    ffi.Pointer<MontyHandle> handle,
  ) {
    return _monty_complete_is_error(
      handle,
    );
  }

  late final _monty_complete_is_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<MontyHandle>)>>(
          'monty_complete_is_error');
  late final _monty_complete_is_error = _monty_complete_is_errorPtr
      .asFunction<int Function(ffi.Pointer<MontyHandle>)>();

  /// Serialize compiled code to a byte buffer (snapshot).
  /// Only valid in Ready state.
  ///
  /// @param handle   Valid handle.
  /// @param out_len  Receives byte count.
  /// @return         Heap-allocated byte buffer, or NULL. Caller frees with monty_bytes_free().
  ffi.Pointer<ffi.Uint8> monty_snapshot(
    ffi.Pointer<MontyHandle> handle,
    ffi.Pointer<ffi.Size> out_len,
  ) {
    return _monty_snapshot(
      handle,
      out_len,
    );
  }

  late final _monty_snapshotPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<MontyHandle>,
              ffi.Pointer<ffi.Size>)>>('monty_snapshot');
  late final _monty_snapshot = _monty_snapshotPtr.asFunction<
      ffi.Pointer<ffi.Uint8> Function(
          ffi.Pointer<MontyHandle>, ffi.Pointer<ffi.Size>)>();

  /// Restore a handle from a snapshot byte buffer.
  ///
  /// @param data       Pointer to snapshot bytes.
  /// @param len        Byte count.
  /// @param out_error  Receives error message on failure. Caller frees.
  /// @return           New heap-allocated handle, or NULL on error.
  ffi.Pointer<MontyHandle> monty_restore(
    ffi.Pointer<ffi.Uint8> data,
    int len,
    ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
  ) {
    return _monty_restore(
      data,
      len,
      out_error,
    );
  }

  late final _monty_restorePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<MontyHandle> Function(ffi.Pointer<ffi.Uint8>, ffi.Size,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('monty_restore');
  late final _monty_restore = _monty_restorePtr.asFunction<
      ffi.Pointer<MontyHandle> Function(
          ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Set memory limit in bytes. Call before monty_run/monty_start.
  void monty_set_memory_limit(
    ffi.Pointer<MontyHandle> handle,
    int bytes,
  ) {
    return _monty_set_memory_limit(
      handle,
      bytes,
    );
  }

  late final _monty_set_memory_limitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<MontyHandle>, ffi.Size)>>('monty_set_memory_limit');
  late final _monty_set_memory_limit = _monty_set_memory_limitPtr
      .asFunction<void Function(ffi.Pointer<MontyHandle>, int)>();

  /// Set execution time limit in milliseconds.
  void monty_set_time_limit_ms(
    ffi.Pointer<MontyHandle> handle,
    int ms,
  ) {
    return _monty_set_time_limit_ms(
      handle,
      ms,
    );
  }

  late final _monty_set_time_limit_msPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<MontyHandle>,
              ffi.Uint64)>>('monty_set_time_limit_ms');
  late final _monty_set_time_limit_ms = _monty_set_time_limit_msPtr
      .asFunction<void Function(ffi.Pointer<MontyHandle>, int)>();

  /// Set stack depth limit.
  void monty_set_stack_limit(
    ffi.Pointer<MontyHandle> handle,
    int depth,
  ) {
    return _monty_set_stack_limit(
      handle,
      depth,
    );
  }

  late final _monty_set_stack_limitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<MontyHandle>, ffi.Size)>>('monty_set_stack_limit');
  late final _monty_set_stack_limit = _monty_set_stack_limitPtr
      .asFunction<void Function(ffi.Pointer<MontyHandle>, int)>();

  /// Free a string returned by any monty_* function. Safe with NULL.
  void monty_string_free(
    ffi.Pointer<ffi.Char> ptr,
  ) {
    return _monty_string_free(
      ptr,
    );
  }

  late final _monty_string_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'monty_string_free');
  late final _monty_string_free =
      _monty_string_freePtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Free a byte buffer returned by monty_snapshot(). Safe with NULL.
  void monty_bytes_free(
    ffi.Pointer<ffi.Uint8> ptr,
    int len,
  ) {
    return _monty_bytes_free(
      ptr,
      len,
    );
  }

  late final _monty_bytes_freePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Size)>>(
      'monty_bytes_free');
  late final _monty_bytes_free = _monty_bytes_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>, int)>();
}

final class MontyHandle extends ffi.Opaque {}

/// Result tag for monty_run().
enum MontyResultTag {
  MONTY_RESULT_OK(0),
  MONTY_RESULT_ERROR(1);

  final int value;
  const MontyResultTag(this.value);

  static MontyResultTag fromValue(int value) => switch (value) {
        0 => MONTY_RESULT_OK,
        1 => MONTY_RESULT_ERROR,
        _ => throw ArgumentError('Unknown value for MontyResultTag: $value'),
      };
}

/// Progress tag for monty_start() / monty_resume().
enum MontyProgressTag {
  MONTY_PROGRESS_COMPLETE(0),
  MONTY_PROGRESS_PENDING(1),
  MONTY_PROGRESS_ERROR(2),
  MONTY_PROGRESS_RESOLVE_FUTURES(3);

  final int value;
  const MontyProgressTag(this.value);

  static MontyProgressTag fromValue(int value) => switch (value) {
        0 => MONTY_PROGRESS_COMPLETE,
        1 => MONTY_PROGRESS_PENDING,
        2 => MONTY_PROGRESS_ERROR,
        3 => MONTY_PROGRESS_RESOLVE_FUTURES,
        _ => throw ArgumentError('Unknown value for MontyProgressTag: $value'),
      };
}
